mobile fix 1 for project 4 overlap

--- a/styles.css
+++ b/styles.css
@@ -630,6 +630,15 @@ footer {
     .project-gif {
         height: auto;
         max-height: 300px;
+        margin-bottom: 2rem;
+    }
+    
+    .project-item h3 {
+        margin-top: 1rem;
+    }
+    
+    .project-description {
+        margin-top: 1rem;
     }
 }
 
@@ -662,6 +671,15 @@ footer {
     
     .project-gif {
         max-height: 250px;
+        margin-bottom: 2rem;
+    }
+    
+    .project-item h3 {
+        margin-top: 1rem;
+    }
+    
+    .project-description {
+        margin-top: 1rem;
     }
 }
 
